# Truck_drone_optimize

./: .gitignore  CMakeLists.txt  Project GA new.code-workspace  README.md
Result compare/: Compare_result.py  Hyper_volume.ipynb  nsga_architecture  nsga_cycle_diagram
build_copy1/: ALL_BUILD.vcxproj  CMakeCache.txt  ProjectGA.sln  ProjectGA.vcxproj  ProjectGA.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_copy2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ProjectGA.sln  ProjectGA.vcxproj  ProjectGA.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_copy3/: ALL_BUILD.vcxproj  CMakeCache.txt  ProjectGA.sln  ProjectGA.vcxproj  ProjectGA.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
data/: Data_100_10_1.txt  Data_100_10_2.txt  Data_100_10_3.txt  Data_100_10_4.txt  Data_100_20_1.txt  Data_100_20_2.txt  Data_100_20_3.txt  Data_100_20_4.txt  Data_100_30_1.txt  Data_100_30_2.txt  Data_100_30_3.txt  Data_100_30_4.txt  Data_100_35_1.txt  Data_100_35_2.txt  Data_100_35_3.txt  Data_100_35_4.txt  Data_100_40_1.txt  Data_100_40_2.txt  Data_100_40_3.txt  Data_100_40_4.txt  Data_100_50_1.txt  Data_100_50_2.txt  Data_100_50_3.txt  Data_100_50_4.txt  Data_100_60_1.txt  Data_100_60_2.txt  Data_100_60_3.txt  Data_100_60_4.txt  Data_200_10_1.txt  Data_200_10_2.txt  Data_200_10_3.txt  Data_200_10_4.txt  Data_200_20_1.txt  Data_200_20_2.txt  Data_200_20_3.txt  Data_200_20_4.txt  Data_200_30_1.txt  Data_200_30_2.txt  Data_200_30_3.txt  Data_200_30_4.txt  (+75 more)
header/: Constants.h  Custom.h  Hamilton_path.h  MOEA.h  NSGA.h  Population.h  Solution.h  TSPTW.h  function.h
main/: Constants.cpp  Hamilton_path.cpp  MOEA.cpp  NSGA.cpp  Population.cpp  Solution.cpp  TSPTW.cpp  function.cpp  main.cpp
multi_truck_problem/: pareto_front_1.txt  pareto_front_10.txt  pareto_front_11.txt  pareto_front_12.txt  pareto_front_2.txt  pareto_front_3.txt  pareto_front_4.txt  pareto_front_5.txt  pareto_front_6.txt  pareto_front_7.txt  pareto_front_8.txt  pareto_front_9.txt
pareto_result/: pareto_front_100_10_1_MOEA_false.txt  pareto_front_100_10_1_MOEA_true.txt  (+331 more)
(+610 files in other folders)
